# compass

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
compass/: __init__.py  logger.py  numeric.py  packmol.py  util.py
compass/_src/: ase.py  interpolation.py  io.py  logger.py  smoothing.py  units.py  util.py
compass/_src/packmol/: packer.py  util.py
compass/_src/packmol/templates/: pack_box.inp
compass/dft/analysis/: formation_energy.py
compass/dft/orca/: __init__.py
compass/dft/vasp/: __init__.py
compass/matproj/: __init__.py  api.py
compass/util/: utils.py
test/: test_numeric.py
test/test_dft/test_analysis/: test_formation_energy.py
test/test_util/: test_units.py
tests/: test_numeric.py
