[tool.poetry]
name = "compass"
version = "0.1.1"
description = ""
authors = ["mjhong0708 <mjhong0708@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
termcolor = "^2.0.1"
rich = "^12.5.1"
numpy = "^1.23.3"
scipy = "^1.9.1"
ase = "^3.22.1"
Jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
flake8 = "^5.0.4"
black = "^22.8.0"
pytest = "^7.1.3"
jupyter = "^1.0.0"
notebook = "^6.4.12"
matplotlib = "^3.6.0"
hypothesis = "^6.54.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
